<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.github.andresvasquez.topmovies.androidApp.ui.splash.SplashFragment"
        android:label="@string/windows_splash"
        app:startDestination="@id/splashFragment"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left" />
        <action
            android:id="@+id/action_splashFragment_to_movieListFragment"
            app:destination="@id/movieListFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.github.andresvasquez.topmovies.androidApp.ui.login.LoginFragment"
        android:label="@string/windows_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_movieListFragment"
            app:destination="@id/movieListFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.github.andresvasquez.topmovies.androidApp.ui.moviedetail.MovieDetailFragment"
        android:label="@string/windows_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="movie"
            app:argType="com.github.andresvasquez.topmovies.androidApp.utils.ParcelablePopularMovie" />
    </fragment>
    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.github.andresvasquez.topmovies.androidApp.ui.movielist.MovieListFragment"
        android:label="@string/windows_list"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left" />
        <argument
            android:name="user"
            app:argType="com.github.andresvasquez.topmovies.androidApp.utils.ParcelableUser" />
    </fragment>
</navigation>