<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.github.andresvasquez.topmovies.shared.data.source.User" />

        <variable
            name="viewModel"
            type="com.github.andresvasquez.topmovies.androidApp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_md">


        <ImageView
            android:id="@+id/user_photo"
            userImage="@{user}"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="@{()-> viewModel.editPhoto()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_android_empty" />

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center"
            android:onClick="@{()-> viewModel.editPhoto()}"
            android:padding="@dimen/space_sm"
            android:text="@string/edit"
            android:textSize="@dimen/text_md"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_photo"
            app:layout_constraintEnd_toEndOf="@+id/user_photo"
            app:layout_constraintStart_toStartOf="@+id/user_photo" />

        <TextView
            android:id="@+id/name_label"
            style="@style/login_form_style"
            android:text="@string/login_display_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_photo" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/space_md"
            android:paddingEnd="@dimen/space_md"
            android:text="@={user.displayName}"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/language_label"
            style="@style/login_form_style"
            android:text="@string/login_language"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/language"
            android:paddingStart="@dimen/space_md"
            android:paddingEnd="@dimen/space_md"
            app:layout_constraintBottom_toBottomOf="@+id/language_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/language_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="name_label,language_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxl"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>