<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.andresvasquez.topmovies.androidApp.ui.splash.SplashViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layoutDescription="@xml/fragment_splash_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splash_loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <ImageView
                android:id="@+id/splash_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splash" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_xl"
                android:text="@string/splash_welcome"
                android:textColor="@color/white"
                android:textSize="@dimen/text_xl"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splash_background_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ImageView
                android:id="@+id/splash2_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/enter_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splash2" />

            <TextView
                android:id="@+id/splash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xxl"
                android:fontFamily="@font/trade_winds"
                android:padding="@dimen/space_xl"
                android:text="@string/splash_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/enter_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_play_arrow_24"
                android:onClick="@{()-> viewModel.navigateToTheNextScreen()}"
                android:text="@string/splash_enter"
                android:textSize="@dimen/text_lg"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>